added patronymic and comment
